--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <p>BTEC Modules</p>
         <p class="view"><a href="https://github.com/ams-ICT/Year-7">View the Project on GitHub <small>ams-ICT/Year-7</small></a></p>
         <ul>
-          <li>module 1</li>
-          <li>Module 2</li>
+          <li>Unit 1</li>
+          <li>Unit 3</li>
+          <li>Unit 13</li>
         </ul>
       </header>
       <section>
