--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <h1>Year 10 BTEC</h1>
         <p>BTEC Modules</p>
-        <p class="view"><a href="https://github.com/ams-ICT/Year-7">View the Project on GitHub <small>ams-ICT/Year-7</small></a></p>
+        <p class="view"><a href="https://github.com/ams-ICT/BTEC ICT">View the Project on GitHub <small>ams-ICT/BTEC ICT</small></a></p>
         <ul>
           <li>Unit 1</li>
           <li>Unit 3</li>
@@ -28,7 +28,9 @@
 
 <p>This is the year 10 BTEC curriculum for the academic year from Sept 2013.</p>
           <ul>
-              <li></li>
+              <li>Unit 1</li>
+              <li>Unit 3</li>
+              <li>Unit 13</li>
       </section>
     </div>
     <footer>
