--- a/Unit 3.html
+++ b/Unit 3.html
@@ -14,13 +14,12 @@
     <div class="wrapper">
       <header>
         <h1>Year 10 BTEC</h1>
-        <p>BTEC Modules</p>
+        <p>BTEC Unit 3</p>
         <p class="view"><a href="https://github.com/ams-ICT/Year-7">View the Project on GitHub <small>ams-ICT/Year-7</small></a></p>
         <ul>
-          <li>Unit 1 </li>
-          <li>Unit 3</li>
-          <li>Unit 13</li>
-        </ul>
+          <li>Learning Aim: A </li>
+          <li>Learning Aim: B </li>
+           <li>Learning Aim: C </li>
       </header>
       <section>
         <h3>
