--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <h1>Year 10 BTEC</h1>
         <p>BTEC Modules</p>
-        <p class="view"><a href="https://github.com/ams-ICT/BTEC ICT">View the Project on GitHub <small>ams-ICT/BTEC ICT</small></a></p>
+        <p class="view"><a href="https://github.com/ams-ICT/BTEC ICT">View the Project on GitHub <small>ams-ICT/10-BTEC</small></a></p>
         <ul>
           <li>Unit 1</li>
           <li>Unit 3</li>
